--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=https://dred-pat-bdwzm.ondigitalocean.app/
-REACT_APP_AUTH_API_URL=http://0.0.0.0:8000/
+REACT_APP_API_URL=https://spartan-10-dred-pat-project-g7y3k.ondigitalocean.app/
+REACT_APP_AUTH_API_URL=https://apiadmindredpat.herokuapp.com/
+REACT_APP_FILE_API_URL=https://serverappimages.herokuapp.com/
