--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "boxicons": "^2.1.1",
+    "canvasjs-react-charts": "^1.0.5",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.0",
     "web-vitals": "^2.1.2"
   },
